<resources>
    <string name="app_name">LoginTest</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="user_name">User Name</string>
    <string name="website">Website</string>

    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_website">Enter Website</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone Number</string>

    <string name="password_invalid">This password is invalid. \n 1 uppercase, 1 lowercase, 1 numeric character and minimum of 8 Characters length</string>
    <string name="email_invalid">This email address is invalid</string>
    <string name="username_invalid">Minimum of 3 Characters length</string>

    <string name="registration_success">Registration Success</string>
    <string name="username_already_taken">Username already taken!</string>
    <string name="incorrect_username_or_password">Incorrect username or password!</string>

    <string name="user_list_empty">Empty user list</string>
    <string name="details">Details</string>
    <string name="map">Map</string>

    <string name="mapbox_access_token">sk.eyJ1IjoiYWRyaWFuYnVjYXlhbiIsImEiOiJjbDVjN2UyamIwYWY0M3BwbmxxOTY0ZWQ5In0.URdswnT9oXIqW__7HmMoIA</string>
    <string name="location_error">Error on getting the location</string>

</resources>