<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.register.RegisterFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBg"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corner_white"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/user_name"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:gravity="start"
                android:hint="@string/enter_username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="3"
                android:text=""
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:gravity="start"
                android:hint="@string/enter_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="3"
                android:text=""
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:gravity="start"
                android:hint="@string/enter_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="3"
                android:text=""
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/name"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:gravity="start"
                android:hint="@string/enter_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="3"
                android:text=""
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/phone"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:gravity="start"
                android:hint="@string/enter_phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="3"
                android:text=""
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/website"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_register_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="40dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:gravity="start"
                android:hint="@string/enter_website"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="3"
                android:text=""
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textStyle="normal" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_login"
            android:layout_marginStart="50dp"
            android:layout_marginTop="-28dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corner_blue1"
            android:elevation="4dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>