<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.login.LoginFragment"
    android:background="@color/colorBg">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/blue_violet_gradient"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/circle_center"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:paddingBottom="60dp"
            android:src="@drawable/circle_white" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:paddingBottom="60dp"
            android:src="@drawable/baseline_house_black_48dp"
            app:tint="@color/blue" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_login"
            android:layout_marginStart="50dp"
            android:layout_marginTop="-28dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corner_blue1"
            android:elevation="4dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corner_white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center_horizontal"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/colorTextPrimary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:gravity="start"
                android:hint="@string/enter_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="3"
                android:text=""
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="50dp"
                android:autofillHints="username"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:gravity="start"
                android:hint="@string/enter_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="3"
                android:text=""
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textStyle="normal" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </RelativeLayout>

    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"
        app:layout_constraintTop_toBottomOf="@+id/rl_login" />

</androidx.constraintlayout.widget.ConstraintLayout>